@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, see <http://www.gnu.org/licenses/>.
 #
-# Copyright (C) 2014 Dominik Kriegner <dominik.kriegner@gmail.com>
+# Copyright (C) 2014-2015 Dominik Kriegner <dominik.kriegner@gmail.com>
 
 import unittest
 
@@ -60,6 +60,19 @@ class TestQConversion(unittest.TestCase):
             q = qout[i]
             self.assertAlmostEqual(q[0, self.ncch], self.hklsym[i], places=10)
             self.assertAlmostEqual(q[1, self.ncch], self.hklsym[i], places=10)
+
+    def test_qconversion_linear_detpos(self):
+        tt = numpy.random.rand(1) * 90
+        dpos = self.hxrd.Ang2Q.getDetectorPos(tt, dim=1)
+        ki = self.hxrd._A2QConversion.r_i / \
+            numpy.linalg.norm(self.hxrd._A2QConversion.r_i) * self.hxrd.k0
+        qout = self.hxrd.Ang2Q.linear(0, tt)
+        for j, x, y, z in zip(range(self.nch), dpos[0], dpos[1], dpos[2]):
+            vpos = numpy.asarray((x, y, z))
+            kf = vpos / numpy.linalg.norm(vpos) * self.hxrd.k0
+            for i in range(3):
+                self.assertAlmostEqual(qout[i][j], kf[i]-ki[i], places=10)
+
 
 if __name__ == '__main__':
     unittest.main()
